// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single.js [__typescript_estree] format 1`] = `
"Declaration or statement expected. (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js [babel-ts] format 1`] = `
"Unexpected token (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js [typescript] format 1`] = `
"Declaration or statement expected. (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"arrowParens":"avoid"} [__typescript_estree] format 1`] = `
"Declaration or statement expected. (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"arrowParens":"avoid"} [babel-ts] format 1`] = `
"Unexpected token (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"arrowParens":"avoid"} [typescript] format 1`] = `
"Declaration or statement expected. (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"arrowParens":"avoid"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
parsers: ["flow", "babel", "babel-flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const selectorByPath:
  Path
 => SomethingSelector<
  SomethingUEditorContextType,
  SomethingUEditorContextType,
  SomethingBulkValue<string>
> = memoizeWithArgs(/* ... */)

=====================================output=====================================
const selectorByPath: Path => SomethingSelector<
  SomethingUEditorContextType,
  SomethingUEditorContextType,
  SomethingBulkValue<string>
> = memoizeWithArgs(/* ... */);

================================================================================
`;

exports[`single.js - {"trailingComma":"all"} [__typescript_estree] format 1`] = `
"Declaration or statement expected. (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"trailingComma":"all"} [babel-ts] format 1`] = `
"Unexpected token (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"trailingComma":"all"} [typescript] format 1`] = `
"Declaration or statement expected. (3:2)
  1 | const selectorByPath:
  2 |   Path
> 3 |  => SomethingSelector<
    |  ^
  4 |   SomethingUEditorContextType,
  5 |   SomethingUEditorContextType,
  6 |   SomethingBulkValue<string>"
`;

exports[`single.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "babel-flow", "typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
const selectorByPath:
  Path
 => SomethingSelector<
  SomethingUEditorContextType,
  SomethingUEditorContextType,
  SomethingBulkValue<string>
> = memoizeWithArgs(/* ... */)

=====================================output=====================================
const selectorByPath: (Path) => SomethingSelector<
  SomethingUEditorContextType,
  SomethingUEditorContextType,
  SomethingBulkValue<string>,
> = memoizeWithArgs(/* ... */);

================================================================================
`;

exports[`single.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "babel-flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const selectorByPath:
  Path
 => SomethingSelector<
  SomethingUEditorContextType,
  SomethingUEditorContextType,
  SomethingBulkValue<string>
> = memoizeWithArgs(/* ... */)

=====================================output=====================================
const selectorByPath: (Path) => SomethingSelector<
  SomethingUEditorContextType,
  SomethingUEditorContextType,
  SomethingBulkValue<string>
> = memoizeWithArgs(/* ... */);

================================================================================
`;

exports[`test.js [__typescript_estree] format 1`] = `
"';' expected. (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js [babel-ts] format 1`] = `
"Unexpected token, expected \\";\\" (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js [typescript] format 1`] = `
"';' expected. (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"arrowParens":"avoid"} [__typescript_estree] format 1`] = `
"';' expected. (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"arrowParens":"avoid"} [babel-ts] format 1`] = `
"Unexpected token, expected \\";\\" (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"arrowParens":"avoid"} [typescript] format 1`] = `
"';' expected. (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"arrowParens":"avoid"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
parsers: ["flow", "babel", "babel-flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Banana = {
  eat: string => boolean,
};

type Hex = {n: 0x01};

type T1 = { method: (a) => void };

type T2 = { method(a): void };

declare class X { method(a): void }

declare function f(a): void;

var f: (a) => void;

interface F1 { m(string): number }

interface F2 { m: (string) => number }

function f1(o: { f: (string) => void }) {}

function f2(o: { f(string): void }) {}

type f3 = (...arg) => void;

type f4 = (/* comment */ arg) => void;

type f5 = (arg /* comment */) => void;

type f6 = (?arg) => void;

class Y {
  constructor(
    ideConnectionFactory: child_process$ChildProcess => FlowIDEConnection =
        defaultIDEConnectionFactory,
  ) {
  }
}

interface F {
  ideConnectionFactoryLongLongLong: (child_process$ChildProcess) => FlowIDEConnection
}

type ExtractType = <A>(B<C>) => D

type T3 = ?(() => A);

type T4 = ?(() => A) | B;

type T5 = ?() => A | B;

type T6 = (?() => A) | B;

// https://github.com/babel/babel/issues/7924
//type T = ??() => A;

type T7 = ?(?(() => A));

type T8 = ?(?() => A) | B;

=====================================output=====================================
type Banana = {
  eat: string => boolean,
};

type Hex = { n: 0x01 };

type T1 = { method: a => void };

type T2 = { method(a): void };

declare class X {
  method(a): void;
}

declare function f(a): void;

var f: a => void;

interface F1 {
  m(string): number;
}

interface F2 {
  m: string => number;
}

function f1(o: { f: string => void }) {}

function f2(o: { f(string): void }) {}

type f3 = (...arg) => void;

type f4 = /* comment */ arg => void;

type f5 = arg /* comment */ => void;

type f6 = (?arg) => void;

class Y {
  constructor(
    ideConnectionFactory: child_process$ChildProcess => FlowIDEConnection = defaultIDEConnectionFactory
  ) {}
}

interface F {
  ideConnectionFactoryLongLongLong: child_process$ChildProcess => FlowIDEConnection;
}

type ExtractType = <A>(B<C>) => D;

type T3 = ?() => A;

type T4 = ?(() => A) | B;

type T5 = ?() => A | B;

type T6 = ?(() => A) | B;

// https://github.com/babel/babel/issues/7924
//type T = ??() => A;

type T7 = ??(() => A);

type T8 = ??(() => A) | B;

================================================================================
`;

exports[`test.js - {"trailingComma":"all"} [__typescript_estree] format 1`] = `
"';' expected. (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"trailingComma":"all"} [babel-ts] format 1`] = `
"Unexpected token, expected \\";\\" (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"trailingComma":"all"} [typescript] format 1`] = `
"';' expected. (2:15)
  1 | type Banana = {
> 2 |   eat: string => boolean,
    |               ^
  3 | };
  4 |
  5 | type Hex = {n: 0x01};"
`;

exports[`test.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "babel-flow", "typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
type Banana = {
  eat: string => boolean,
};

type Hex = {n: 0x01};

type T1 = { method: (a) => void };

type T2 = { method(a): void };

declare class X { method(a): void }

declare function f(a): void;

var f: (a) => void;

interface F1 { m(string): number }

interface F2 { m: (string) => number }

function f1(o: { f: (string) => void }) {}

function f2(o: { f(string): void }) {}

type f3 = (...arg) => void;

type f4 = (/* comment */ arg) => void;

type f5 = (arg /* comment */) => void;

type f6 = (?arg) => void;

class Y {
  constructor(
    ideConnectionFactory: child_process$ChildProcess => FlowIDEConnection =
        defaultIDEConnectionFactory,
  ) {
  }
}

interface F {
  ideConnectionFactoryLongLongLong: (child_process$ChildProcess) => FlowIDEConnection
}

type ExtractType = <A>(B<C>) => D

type T3 = ?(() => A);

type T4 = ?(() => A) | B;

type T5 = ?() => A | B;

type T6 = (?() => A) | B;

// https://github.com/babel/babel/issues/7924
//type T = ??() => A;

type T7 = ?(?(() => A));

type T8 = ?(?() => A) | B;

=====================================output=====================================
type Banana = {
  eat: (string) => boolean,
};

type Hex = { n: 0x01 };

type T1 = { method: (a) => void };

type T2 = { method(a): void };

declare class X {
  method(a): void;
}

declare function f(a): void;

var f: (a) => void;

interface F1 {
  m(string): number;
}

interface F2 {
  m: (string) => number;
}

function f1(o: { f: (string) => void }) {}

function f2(o: { f(string): void }) {}

type f3 = (...arg) => void;

type f4 = (/* comment */ arg) => void;

type f5 = (arg /* comment */) => void;

type f6 = (?arg) => void;

class Y {
  constructor(
    ideConnectionFactory: (child_process$ChildProcess) => FlowIDEConnection = defaultIDEConnectionFactory,
  ) {}
}

interface F {
  ideConnectionFactoryLongLongLong: (child_process$ChildProcess) => FlowIDEConnection;
}

type ExtractType = <A>(B<C>) => D;

type T3 = ?() => A;

type T4 = ?(() => A) | B;

type T5 = ?() => A | B;

type T6 = ?(() => A) | B;

// https://github.com/babel/babel/issues/7924
//type T = ??() => A;

type T7 = ??(() => A);

type T8 = ??(() => A) | B;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "babel-flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Banana = {
  eat: string => boolean,
};

type Hex = {n: 0x01};

type T1 = { method: (a) => void };

type T2 = { method(a): void };

declare class X { method(a): void }

declare function f(a): void;

var f: (a) => void;

interface F1 { m(string): number }

interface F2 { m: (string) => number }

function f1(o: { f: (string) => void }) {}

function f2(o: { f(string): void }) {}

type f3 = (...arg) => void;

type f4 = (/* comment */ arg) => void;

type f5 = (arg /* comment */) => void;

type f6 = (?arg) => void;

class Y {
  constructor(
    ideConnectionFactory: child_process$ChildProcess => FlowIDEConnection =
        defaultIDEConnectionFactory,
  ) {
  }
}

interface F {
  ideConnectionFactoryLongLongLong: (child_process$ChildProcess) => FlowIDEConnection
}

type ExtractType = <A>(B<C>) => D

type T3 = ?(() => A);

type T4 = ?(() => A) | B;

type T5 = ?() => A | B;

type T6 = (?() => A) | B;

// https://github.com/babel/babel/issues/7924
//type T = ??() => A;

type T7 = ?(?(() => A));

type T8 = ?(?() => A) | B;

=====================================output=====================================
type Banana = {
  eat: (string) => boolean,
};

type Hex = { n: 0x01 };

type T1 = { method: (a) => void };

type T2 = { method(a): void };

declare class X {
  method(a): void;
}

declare function f(a): void;

var f: (a) => void;

interface F1 {
  m(string): number;
}

interface F2 {
  m: (string) => number;
}

function f1(o: { f: (string) => void }) {}

function f2(o: { f(string): void }) {}

type f3 = (...arg) => void;

type f4 = (/* comment */ arg) => void;

type f5 = (arg /* comment */) => void;

type f6 = (?arg) => void;

class Y {
  constructor(
    ideConnectionFactory: (child_process$ChildProcess) => FlowIDEConnection = defaultIDEConnectionFactory
  ) {}
}

interface F {
  ideConnectionFactoryLongLongLong: (child_process$ChildProcess) => FlowIDEConnection;
}

type ExtractType = <A>(B<C>) => D;

type T3 = ?() => A;

type T4 = ?(() => A) | B;

type T5 = ?() => A | B;

type T6 = ?(() => A) | B;

// https://github.com/babel/babel/issues/7924
//type T = ??() => A;

type T7 = ??(() => A);

type T8 = ??(() => A) | B;

================================================================================
`;
